some primitive functions were added.

--- a/manual/unicos/makefile
+++ b/manual/unicos/makefile
@@ -13,10 +13,16 @@ clean:
 	rm -f compiled/copy_unicos_manually.o
 	rm -f compiled/write_unicos_manually.o
 	rm -f compiled/copy_to_unicos.o
-	
-unicos.lib: compiled/init_unicos.o compiled/clear_unicos.o compiled/get_unicos.o compiled/put_unicos_manually.o compiled/has_margin_unicos.o compiled/size_unicos.o compiled/copy_unicos_manually.o compiled/write_unicos_manually.o compiled/copy_to_unicos.o
-	ar r unicos.lib compiled/init_unicos.o compiled/clear_unicos.o compiled/get_unicos.o compiled/put_unicos_manually.o compiled/has_margin_unicos.o compiled/size_unicos.o compiled/copy_unicos_manually.o compiled/write_unicos_manually.o compiled/copy_to_unicos.o
-	
+	rm -f compiled/slice_unicos_manually.o 
+	rm -f compiled/concat_unicos_manually.o
+	rm -f compiled/is_equal_unicos.o
+	rm -f compiled/is_unequal_unicos.o
+	rm -f compiled/is_equalp_unicos.o
+	rm -f compiled/is_unequalp_unicos.o
+
+unicos.lib: compiled/init_unicos.o compiled/clear_unicos.o compiled/get_unicos.o compiled/put_unicos_manually.o compiled/has_margin_unicos.o compiled/size_unicos.o compiled/copy_unicos_manually.o compiled/write_unicos_manually.o compiled/copy_to_unicos.o compiled/slice_unicos_manually.o compiled/concat_unicos_manually.o compiled/is_equal_unicos.o compiled/is_unequal_unicos.o compiled/is_equalp_unicos.o compiled/is_unequalp_unicos.o
+	ar r unicos.lib compiled/init_unicos.o compiled/clear_unicos.o compiled/get_unicos.o compiled/put_unicos_manually.o compiled/has_margin_unicos.o compiled/size_unicos.o compiled/copy_unicos_manually.o compiled/write_unicos_manually.o compiled/copy_to_unicos.o compiled/slice_unicos_manually.o compiled/concat_unicos_manually.o compiled/is_equal_unicos.o compiled/is_unequal_unicos.o compiled/is_equalp_unicos.o compiled/is_unequalp_unicos.o
+
 compiled/init_unicos.o: src/init_unicos.c
 	$(CC) $(CFLAGS) -c src/init_unicos.c -o compiled/init_unicos.o
 	
@@ -43,3 +49,21 @@ compiled/write_unicos_manually.o: src/write_unicos_manually.c
 	
 compiled/copy_to_unicos.o: src/copy_to_unicos.c
 	$(CC) $(CFLAGS) -c src/copy_to_unicos.c -o compiled/copy_to_unicos.o
+
+compiled/slice_unicos_manually.o: src/slice_unicos_manually.c
+	$(CC) $(CFLAGS) -c src/slice_unicos_manually.c -o compiled/slice_unicos_manually.o
+
+compiled/concat_unicos_manually.o: src/concat_unicos_manually.c
+	$(CC) $(CFLAGS) -c src/concat_unicos_manually.c -o compiled/concat_unicos_manually.o
+
+compiled/is_equal_unicos.o: src/is_equal_unicos.c
+	$(CC) $(CFLAGS) -c src/is_equal_unicos.c -o compiled/is_equal_unicos.o
+
+compiled/is_unequal_unicos.o: src/is_unequal_unicos.c
+	$(CC) $(CFLAGS) -c src/is_unequal_unicos.c -o compiled/is_unequal_unicos.o
+
+compiled/is_equalp_unicos.o: src/is_equalp_unicos.c
+	$(CC) $(CFLAGS) -c src/is_equalp_unicos.c -o compiled/is_equalp_unicos.o
+
+compiled/is_unequalp_unicos.o: src/is_unequalp_unicos.c
+	$(CC) $(CFLAGS) -c src/is_unequalp_unicos.c -o compiled/is_unequalp_unicos.o
