predicate function of is_whitespace_unico was added.

--- a/manual/unico/src/makefile
+++ b/manual/unico/src/makefile
@@ -4,6 +4,7 @@ all:
 	make is_spacing_combining_unico.c
 	make is_non_spacing_combining_unico.c
 	make is_enclosing_combining_unico.c
+	make is_whitespace_unico.c
 
 is_spacing_combining_unico.c: script/dist/is_spacing_combining_unico.c
 	cp script/dist/is_spacing_combining_unico.c is_spacing_combining_unico.c
@@ -13,3 +14,6 @@ is_non_spacing_combining_unico.c: script/dist/is_non_spacing_combining_unico.c
 
 is_enclosing_combining_unico.c: script/dist/is_enclosing_combining_unico.c
 	cp script/dist/is_enclosing_combining_unico.c is_enclosing_combining_unico.c
+
+is_whitespace_unico.c: script/dist/is_whitespace_unico.c
+	cp script/dist/is_whitespace_unico.c is_whitespace_unico.c
