internal function of replace_unicos_manually and replace_unicos were renamed to sub_unicos~.

--- a/auto/unicoc/makefile
+++ b/auto/unicoc/makefile
@@ -7,7 +7,7 @@ clean:
 	rm -f compiled/extend_unicoc.o
 	rm -f compiled/insert_unicoc.o
 	rm -f compiled/inserts_unicoc.o
-	rm -f compiled/replace_unicoc.o
+	rm -f compiled/sub_unicoc.o
 	rm -f compiled/upcase_unicoc.o
 	rm -f compiled/downcase_unicoc.o
 	rm -f compiled/foldcase_unicoc.o
@@ -17,8 +17,8 @@ clean:
 	rm -f compiled/normalize_nfkc_unicoc.o
 	rm -f compiled/normalize_nfkd_unicoc.o
 
-unicoc.lib: compiled/extend_unicoc.o compiled/insert_unicoc.o compiled/inserts_unicoc.o compiled/replace_unicoc.o compiled/upcase_unicoc.o compiled/downcase_unicoc.o compiled/foldcase_unicoc.o compiled/title_unicoc.o compiled/normalize_nfc_unicoc.o compiled/normalize_nfd_unicoc.o compiled/normalize_nfkc_unicoc.o compiled/normalize_nfkd_unicoc.o
-	ar r unicoc.lib compiled/extend_unicoc.o compiled/insert_unicoc.o compiled/inserts_unicoc.o compiled/replace_unicoc.o compiled/upcase_unicoc.o compiled/downcase_unicoc.o compiled/foldcase_unicoc.o compiled/title_unicoc.o compiled/normalize_nfc_unicoc.o compiled/normalize_nfd_unicoc.o compiled/normalize_nfkc_unicoc.o compiled/normalize_nfkd_unicoc.o
+unicoc.lib: compiled/extend_unicoc.o compiled/insert_unicoc.o compiled/inserts_unicoc.o compiled/sub_unicoc.o compiled/upcase_unicoc.o compiled/downcase_unicoc.o compiled/foldcase_unicoc.o compiled/title_unicoc.o compiled/normalize_nfc_unicoc.o compiled/normalize_nfd_unicoc.o compiled/normalize_nfkc_unicoc.o compiled/normalize_nfkd_unicoc.o
+	ar r unicoc.lib compiled/extend_unicoc.o compiled/insert_unicoc.o compiled/inserts_unicoc.o compiled/sub_unicoc.o compiled/upcase_unicoc.o compiled/downcase_unicoc.o compiled/foldcase_unicoc.o compiled/title_unicoc.o compiled/normalize_nfc_unicoc.o compiled/normalize_nfd_unicoc.o compiled/normalize_nfkc_unicoc.o compiled/normalize_nfkd_unicoc.o
 
 compiled/extend_unicoc.o: src/extend_unicoc.c
 	$(CC) $(CFLAGS) -c src/extend_unicoc.c -o compiled/extend_unicoc.o
@@ -29,8 +29,8 @@ compiled/insert_unicoc.o: src/insert_unicoc.c
 compiled/inserts_unicoc.o: src/inserts_unicoc.c
 	$(CC) $(CFLAGS) -c src/inserts_unicoc.c -o compiled/inserts_unicoc.o
 
-compiled/replace_unicoc.o: src/replace_unicoc.c
-	$(CC) $(CFLAGS) -c src/replace_unicoc.c -o compiled/replace_unicoc.o
+compiled/sub_unicoc.o: src/sub_unicoc.c
+	$(CC) $(CFLAGS) -c src/sub_unicoc.c -o compiled/sub_unicoc.o
 
 compiled/upcase_unicoc.o: src-convertion/upcase_unicoc.c
 	$(CC) $(CFLAGS) -c src-convertion/upcase_unicoc.c -o compiled/upcase_unicoc.o
