--- a/auto/unicos/makefile
+++ b/auto/unicos/makefile
@@ -9,7 +9,7 @@ clean:
 	rm -f compiled/extend_unicos.o
 	rm -f compiled/insert_unicos.o
 	rm -f compiled/inserts_unicos.o
-	rm -f compiled/replace_unicos.o
+	rm -f compiled/sub_unicos.o
 	rm -f compiled/upcase_unicos.o
 	rm -f compiled/downcase_unicos.o
 	rm -f compiled/foldcase_unicos.o
@@ -20,8 +20,8 @@ clean:
 	rm -f compiled/normalize_nfkd_unicos.o
 	rm -f compiled/free_unicos.o
 
-unicos.lib: compiled/make_unicos.o compiled/copy_unicos.o compiled/extend_unicos.o compiled/insert_unicos.o compiled/inserts_unicos.o compiled/replace_unicos.o compiled/upcase_unicos.o compiled/downcase_unicos.o compiled/foldcase_unicos.o compiled/title_unicos.o compiled/normalize_nfc_unicos.o compiled/normalize_nfd_unicos.o compiled/normalize_nfkc_unicos.o compiled/normalize_nfkd_unicos.o compiled/free_unicos.o
-	ar r unicos.lib compiled/make_unicos.o compiled/copy_unicos.o compiled/extend_unicos.o compiled/insert_unicos.o compiled/inserts_unicos.o compiled/replace_unicos.o compiled/upcase_unicos.o compiled/downcase_unicos.o compiled/foldcase_unicos.o compiled/title_unicos.o compiled/normalize_nfc_unicos.o compiled/normalize_nfd_unicos.o compiled/normalize_nfkc_unicos.o compiled/normalize_nfkd_unicos.o compiled/free_unicos.o
+unicos.lib: compiled/make_unicos.o compiled/copy_unicos.o compiled/extend_unicos.o compiled/insert_unicos.o compiled/inserts_unicos.o compiled/sub_unicos.o compiled/upcase_unicos.o compiled/downcase_unicos.o compiled/foldcase_unicos.o compiled/title_unicos.o compiled/normalize_nfc_unicos.o compiled/normalize_nfd_unicos.o compiled/normalize_nfkc_unicos.o compiled/normalize_nfkd_unicos.o compiled/free_unicos.o
+	ar r unicos.lib compiled/make_unicos.o compiled/copy_unicos.o compiled/extend_unicos.o compiled/insert_unicos.o compiled/inserts_unicos.o compiled/sub_unicos.o compiled/upcase_unicos.o compiled/downcase_unicos.o compiled/foldcase_unicos.o compiled/title_unicos.o compiled/normalize_nfc_unicos.o compiled/normalize_nfd_unicos.o compiled/normalize_nfkc_unicos.o compiled/normalize_nfkd_unicos.o compiled/free_unicos.o
 
 compiled/make_unicos.o: src/make_unicos.c
 	$(CC) $(CFLAGS) -c src/make_unicos.c -o compiled/make_unicos.o
@@ -38,8 +38,8 @@ compiled/insert_unicos.o: src/insert_unicos.c
 compiled/inserts_unicos.o: src/inserts_unicos.c
 	$(CC) $(CFLAGS) -c src/inserts_unicos.c -o compiled/inserts_unicos.o
 
-compiled/replace_unicos.o: src/replace_unicos.c
-	$(CC) $(CFLAGS) -c src/replace_unicos.c -o compiled/replace_unicos.o
+compiled/sub_unicos.o: src/sub_unicos.c
+	$(CC) $(CFLAGS) -c src/sub_unicos.c -o compiled/sub_unicos.o
 
 compiled/upcase_unicos.o: src-convertion/upcase_unicos.c
 	$(CC) $(CFLAGS) -c src-convertion/upcase_unicos.c -o compiled/upcase_unicos.o
