load function of load_unicos_from_utf8_array, ~utf8_string, ~utf16_array and ~utf32_array were added.

--- a/manual/utf16/makefile
+++ b/manual/utf16/makefile
@@ -9,9 +9,10 @@ clean:
 	rm -f compiled/put_unicop_utf16_manually.o
 	rm -f compiled/put_unicob_as_utf16_manually.o
 	rm -f compiled/put_bom_unicob_as_utf16_manually.o
+	rm -f compiled/load_unicos_from_utf16_array.o
 
-utf16.lib: compiled/init_unicop_utf16.o compiled/utilities_unicop_utf16.o compiled/put_unicop_utf16_manually.o compiled/put_unicob_as_utf16_manually.o compiled/put_bom_unicob_as_utf16_manually.o
-	ar r utf16.lib compiled/init_unicop_utf16.o compiled/utilities_unicop_utf16.o compiled/put_unicop_utf16_manually.o compiled/put_unicob_as_utf16_manually.o compiled/put_bom_unicob_as_utf16_manually.o
+utf16.lib: compiled/init_unicop_utf16.o compiled/utilities_unicop_utf16.o compiled/put_unicop_utf16_manually.o compiled/put_unicob_as_utf16_manually.o compiled/put_bom_unicob_as_utf16_manually.o compiled/load_unicos_from_utf16_array.o
+	ar r utf16.lib compiled/init_unicop_utf16.o compiled/utilities_unicop_utf16.o compiled/put_unicop_utf16_manually.o compiled/put_unicob_as_utf16_manually.o compiled/put_bom_unicob_as_utf16_manually.o compiled/load_unicos_from_utf16_array.o
 
 compiled/init_unicop_utf16.o: src/init_unicop_utf16.c
 	$(CC) $(CFLAGS) -c src/init_unicop_utf16.c -o compiled/init_unicop_utf16.o
@@ -27,3 +28,6 @@ compiled/put_unicob_as_utf16_manually.o: src/put_unicob_as_utf16_manually.c
 
 compiled/put_bom_unicob_as_utf16_manually.o: src/put_bom_unicob_as_utf16_manually.c
 	$(CC) $(CFLAGS) -c src/put_bom_unicob_as_utf16_manually.c -o compiled/put_bom_unicob_as_utf16_manually.o
+
+compiled/load_unicos_from_utf16_array.o: src/load_unicos_from_utf16_array.c
+	$(CC) $(CFLAGS) -c src/load_unicos_from_utf16_array.c -o compiled/load_unicos_from_utf16_array.o
