added many operator functions for unicos.

--- a/manual/unicos/src-convertion/makefile
+++ b/manual/unicos/src-convertion/makefile
@@ -4,7 +4,7 @@ all:
 	make downcase_size_unicos_in.c
 	make upcase_size_unicos_in.c
 	make foldcase_size_unicos_in.c
-	make title_size_unicos_in.c
+	make titlecase_size_unicos_in.c
 	make normalize_nfc_size_unicos_in.c
 	make normalize_nfd_size_unicos_in.c
 	make normalize_nfkc_size_unicos_in.c
@@ -12,7 +12,7 @@ all:
 	make downcase_unicos_manually_in.c
 	make upcase_unicos_manually_in.c
 	make foldcase_unicos_manually_in.c
-	make title_unicos_manually_in.c
+	make titlecase_unicos_manually_in.c
 	make normalize_nfc_unicos_manually_in.c
 	make normalize_nfd_unicos_manually_in.c
 	make normalize_nfkc_unicos_manually_in.c
@@ -20,7 +20,7 @@ all:
 	make is_downcase_unicos_in.c
 	make is_upcase_unicos_in.c
 	make is_foldcase_unicos_in.c
-	make is_title_unicos_in.c
+	make is_titlecase_unicos_in.c
 	make is_normalize_nfc_unicos_in.c
 	make is_normalize_nfd_unicos_in.c
 	make is_normalize_nfkc_unicos_in.c
@@ -35,8 +35,8 @@ upcase_size_unicos_in.c: script/dist/upcase_size_unicos_in.c
 foldcase_size_unicos_in.c: script/dist/foldcase_size_unicos_in.c
 	cp script/dist/foldcase_size_unicos_in.c foldcase_size_unicos_in.c
 
-title_size_unicos_in.c: script/dist/title_size_unicos_in.c
-	cp script/dist/title_size_unicos_in.c title_size_unicos_in.c
+titlecase_size_unicos_in.c: script/dist/titlecase_size_unicos_in.c
+	cp script/dist/titlecase_size_unicos_in.c titlecase_size_unicos_in.c
 
 normalize_nfc_size_unicos_in.c: script/dist/normalize_nfc_size_unicos_in.c
 	cp script/dist/normalize_nfc_size_unicos_in.c normalize_nfc_size_unicos_in.c
@@ -59,8 +59,8 @@ upcase_unicos_manually_in.c: script/dist/upcase_unicos_manually_in.c
 foldcase_unicos_manually_in.c: script/dist/foldcase_unicos_manually_in.c
 	cp script/dist/foldcase_unicos_manually_in.c foldcase_unicos_manually_in.c
 	
-title_unicos_manually_in.c: script/dist/title_unicos_manually_in.c
-	cp script/dist/title_unicos_manually_in.c title_unicos_manually_in.c
+titlecase_unicos_manually_in.c: script/dist/titlecase_unicos_manually_in.c
+	cp script/dist/titlecase_unicos_manually_in.c titlecase_unicos_manually_in.c
 
 normalize_nfc_unicos_manually_in.c: script/dist/normalize_nfc_unicos_manually_in.c
 	cp script/dist/normalize_nfc_unicos_manually_in.c normalize_nfc_unicos_manually_in.c
@@ -83,8 +83,8 @@ is_upcase_unicos_in.c: script/dist/is_upcase_unicos_in.c
 is_foldcase_unicos_in.c: script/dist/is_foldcase_unicos_in.c
 	cp script/dist/is_foldcase_unicos_in.c is_foldcase_unicos_in.c
 	
-is_title_unicos_in.c: script/dist/is_title_unicos_in.c
-	cp script/dist/is_title_unicos_in.c is_title_unicos_in.c
+is_titlecase_unicos_in.c: script/dist/is_titlecase_unicos_in.c
+	cp script/dist/is_titlecase_unicos_in.c is_titlecase_unicos_in.c
 
 is_normalize_nfc_unicos_in.c: script/dist/is_normalize_nfc_unicos_in.c
 	cp script/dist/is_normalize_nfc_unicos_in.c is_normalize_nfc_unicos_in.c
