--- a/auto/unicos/makefile
+++ b/auto/unicos/makefile
@@ -21,9 +21,17 @@ clean:
 	rm -f compiled/normalize_nfkc_unicos.o
 	rm -f compiled/normalize_nfkd_unicos.o
 	rm -f compiled/free_unicos.o
+	rm -f compiled/upcased_unicos.o
+	rm -f compiled/downcased_unicos.o
+	rm -f compiled/foldcased_unicos.o
+	rm -f compiled/titlecased_unicos.o
+	rm -f compiled/normalized_nfc_unicos.o
+	rm -f compiled/normalized_nfd_unicos.o
+	rm -f compiled/normalized_nfkc_unicos.o
+	rm -f compiled/normalized_nfkd_unicos.o
 
-unicos.lib: compiled/make_unicos.o compiled/copy_unicos.o compiled/extend_unicos.o compiled/insert_unicos.o compiled/inserts_unicos.o compiled/sub_unicos.o compiled/upcase_unicos.o compiled/downcase_unicos.o compiled/foldcase_unicos.o compiled/titlecase_unicos.o compiled/normalize_nfc_unicos.o compiled/normalize_nfd_unicos.o compiled/normalize_nfkc_unicos.o compiled/normalize_nfkd_unicos.o compiled/free_unicos.o
-	ar r unicos.lib compiled/make_unicos.o compiled/copy_unicos.o compiled/extend_unicos.o compiled/insert_unicos.o compiled/inserts_unicos.o compiled/sub_unicos.o compiled/upcase_unicos.o compiled/downcase_unicos.o compiled/foldcase_unicos.o compiled/titlecase_unicos.o compiled/normalize_nfc_unicos.o compiled/normalize_nfd_unicos.o compiled/normalize_nfkc_unicos.o compiled/normalize_nfkd_unicos.o compiled/free_unicos.o
+unicos.lib: compiled/make_unicos.o compiled/copy_unicos.o compiled/extend_unicos.o compiled/insert_unicos.o compiled/inserts_unicos.o compiled/sub_unicos.o compiled/upcase_unicos.o compiled/downcase_unicos.o compiled/foldcase_unicos.o compiled/titlecase_unicos.o compiled/normalize_nfc_unicos.o compiled/normalize_nfd_unicos.o compiled/normalize_nfkc_unicos.o compiled/normalize_nfkd_unicos.o compiled/free_unicos.o compiled/upcased_unicos.o compiled/downcased_unicos.o compiled/foldcased_unicos.o compiled/titlecased_unicos.o compiled/normalized_nfc_unicos.o compiled/normalized_nfd_unicos.o compiled/normalized_nfkc_unicos.o compiled/normalized_nfkd_unicos.o
+	ar r unicos.lib compiled/make_unicos.o compiled/copy_unicos.o compiled/extend_unicos.o compiled/insert_unicos.o compiled/inserts_unicos.o compiled/sub_unicos.o compiled/upcase_unicos.o compiled/downcase_unicos.o compiled/foldcase_unicos.o compiled/titlecase_unicos.o compiled/normalize_nfc_unicos.o compiled/normalize_nfd_unicos.o compiled/normalize_nfkc_unicos.o compiled/normalize_nfkd_unicos.o compiled/free_unicos.o compiled/upcased_unicos.o compiled/downcased_unicos.o compiled/foldcased_unicos.o compiled/titlecased_unicos.o compiled/normalized_nfc_unicos.o compiled/normalized_nfd_unicos.o compiled/normalized_nfkc_unicos.o compiled/normalized_nfkd_unicos.o
 
 compiled/make_unicos.o: src/make_unicos.c
 	$(CC) $(CFLAGS) -c src/make_unicos.c -o compiled/make_unicos.o
@@ -69,3 +77,27 @@ compiled/normalize_nfkd_unicos.o: src-convertion/normalize_nfkd_unicos.c
 
 compiled/free_unicos.o: src/free_unicos.c
 	$(CC) $(CFLAGS) -c src/free_unicos.c -o compiled/free_unicos.o
+
+compiled/upcased_unicos.o: src-convertion/upcased_unicos.c
+	$(CC) $(CFLAGS) -c src-convertion/upcased_unicos.c -o compiled/upcased_unicos.o
+
+compiled/downcased_unicos.o: src-convertion/downcased_unicos.c
+	$(CC) $(CFLAGS) -c src-convertion/downcased_unicos.c -o compiled/downcased_unicos.o
+
+compiled/foldcased_unicos.o: src-convertion/foldcased_unicos.c
+	$(CC) $(CFLAGS) -c src-convertion/foldcased_unicos.c -o compiled/foldcased_unicos.o
+
+compiled/titlecased_unicos.o: src-convertion/titlecased_unicos.c
+	$(CC) $(CFLAGS) -c src-convertion/titlecased_unicos.c -o compiled/titlecased_unicos.o
+
+compiled/normalized_nfc_unicos.o: src-convertion/normalized_nfc_unicos.c
+	$(CC) $(CFLAGS) -c src-convertion/normalized_nfc_unicos.c -o compiled/normalized_nfc_unicos.o
+
+compiled/normalized_nfd_unicos.o: src-convertion/normalized_nfd_unicos.c
+	$(CC) $(CFLAGS) -c src-convertion/normalized_nfd_unicos.c -o compiled/normalized_nfd_unicos.o
+
+compiled/normalized_nfkc_unicos.o: src-convertion/normalized_nfkc_unicos.c
+	$(CC) $(CFLAGS) -c src-convertion/normalized_nfkc_unicos.c -o compiled/normalized_nfkc_unicos.o
+
+compiled/normalized_nfkd_unicos.o: src-convertion/normalized_nfkd_unicos.c
+	$(CC) $(CFLAGS) -c src-convertion/normalized_nfkd_unicos.c -o compiled/normalized_nfkd_unicos.o
